# rbac-service

./: .gitignore  Dockerfile  pyproject.toml
app/: auth.py  db.py  initial_data.py  main.py  services.py
app/api/v1/: users.py
app/core/: config.py
app/models/: __init__.py  role.py
app/schemas/: __init__.py  roles.py
rbac_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_default_roles.py  test_user_roles.py
